cluster/traefik/whoami.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: traefik
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      ingress:
        hosts:
          - asicforecast.com
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
